--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!-- 
   @Author: Zhenxiang Chen
   @Date:   2021-12-04 14:41:53
-  @Last Modified by:   Zhenxiang Chen
-  @Last Modified time: 2021-12-04 14:58:59
+  @Last Modified by:   Costardi Paolo @ Tech-Farm Srl
+  @Last Modified time: 2023-05-24 18:04:36
 -->
 <strong>Status: {{status}}</strong>
 <div>
@@ -13,7 +13,12 @@
   <button (click)="requestBluetooth()">Connect to Bluetooth</button>
 </div>
 
-
+<!--
+<div>
+  <input [(ngModel)]="ip" type="text" name="ip" placeholder="IP of printer with WebPRNT">
+  <button (click)="connectToNetwork()">Connect to Network</button>
+</div>
+-->
 <div>
   <button (click)="print()" [disabled]="status === false"> Print!</button>
 </div>
